Remove scroll behind modal; fix color, fonts

--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -21,6 +21,7 @@
   right: 18px;
   background-color: $base-white;
   border:none;
+  cursor: pointer;
 }
 
 .modal__close:hover,
