--- a/src/components/popups/popup-delete/popup-delete.scss
+++ b/src/components/popups/popup-delete/popup-delete.scss
@@ -41,6 +41,7 @@
   font-size: 16px;
   line-height: 15px;
   letter-spacing: .08em;
+  cursor: pointer;
 }
 
 .popup-delete__close {
@@ -61,4 +62,5 @@
   letter-spacing: .1em;
   color: $special-scorpion;
   background-color: $base-white;
+  cursor: pointer;
 }
