--- a/src/components/popups/popup-success/popup-success.scss
+++ b/src/components/popups/popup-success/popup-success.scss
@@ -34,6 +34,7 @@
   letter-spacing: .1em;
   color: $special-scorpion;
   background-color: $base-white;
+  cursor: pointer;
 }
 
 .popup-success__close:hover,
