--- a/src/components/sort/sort.scss
+++ b/src/components/sort/sort.scss
@@ -57,6 +57,7 @@
 
 .sort__button {
   fill: $special-dove-gray;
+  cursor: pointer;
 
   &--active {
     fill: $base-black
