--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -9,7 +9,6 @@ html {
 }
 
 body, html {
-  overflow-y: auto;
   -ms-overflow-style: unset;
   scrollbar-width: none;
 
